--- a/Colorpicker.html
+++ b/Colorpicker.html
@@ -14,7 +14,10 @@
             <span id="message"></span></div>
         <div id="output"></div>
     </div>
+    <!-- Commenting out src and using github js source.
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    -->
+    <script src="/js/jquery.min.js"></script>
     <script>
         $(document).ready(function() {
             var colorArray = [];
