--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     please see the following projects:
     <ul>
-        <li>Color Picker</li>
+        <li><a href="/Colorpicker.html">Color Picker</a></li>
         <li>Lock Picker</li>
         <li>Memory Game</li>
     </ul>
