--- a/Colorpicker.html
+++ b/Colorpicker.html
@@ -17,7 +17,7 @@
     <!-- Commenting out src and using github js source.
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     -->
-    <script src="/js/jquery.min.js"></script>
+    <script src="/learning-javascript/js/jquery.min.js"></script>
     <script>
         $(document).ready(function() {
             var colorArray = [];
