--- a/Lockpicker.html
+++ b/Lockpicker.html
@@ -16,7 +16,10 @@
         <input type="number" id="lock3" min="0" max="9" />
         <div class="btn" id="checkLock">Open Lock &#128274</div>
     </div>
+     <!-- Commenting out src and using github js source.
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    -->
+    <script src="/learning-javascript/js/jquery.min.js"></script>
     <script>
         $(document).ready(function() {
             $('#output').hide();
