--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     please see the following projects:
     <ul>
         <li><a href="/learning-javascript/Colorpicker.html">Color Picker</a></li>
-        <li>Lock Picker</li>
+        <li><a href="/learning-javascript/Lockpicker.html">Lock Picker</a></li>
         <li>Memory Game</li>
     </ul>
 </body>
