--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="/learning-javascript/Colorpicker.html">Color Picker</a></li>
         <li><a href="/learning-javascript/Lockpicker.html">Lock Picker</a></li>
-        <li>Memory Game</li>
+        <li><a href="/learning-javascript/MemoryGame.html">Memory Game</a></li>
     </ul>
 </body>
 </html>
