--- a/MemoryGame.html
+++ b/MemoryGame.html
@@ -54,7 +54,10 @@
         <span class="score">0</span></div>
     <div class="game"></div>
         
+    <!-- Commenting out src and using github js source.
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    -->
+    <script src="/learning-javascript/js/jquery.min.js"></script>
     <script>
         const boxes = ['red', 'blue', 'green', 'purple', 'yellow', 'pink', 'black', 'orange'];
         const game = {};
