--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     please see the following projects:
     <ul>
-        <li><a href="/learning-javascript/Colorpicker/index.html">Color Picker</a></li>
+        <li><a href="/learning-javascript/Colorpicker/">Color Picker</a></li>
         <li><a href="/learning-javascript/Lockpicker.html">Lock Picker</a></li>
         <li><a href="/learning-javascript/MemoryGame.html">Memory Game</a></li>
     </ul>
