--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     please see the following projects:
     <ul>
         <li><a href="/learning-javascript/Colorpicker/">Color Picker</a></li>
-        <li><a href="/learning-javascript/Lockpicker.html">Lock Picker</a></li>
+        <li><a href="/learning-javascript/Lockpicker/">Lock Picker</a></li>
         <li><a href="/learning-javascript/MemoryGame.html">Memory Game</a></li>
     </ul>
 </body>
