--- a/MemoryGame.html
+++ b/MemoryGame.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
     <style>
         .startBtn{
@@ -153,18 +155,5 @@
             })
         }
     </script>
-
-
-
-
-
-
-
-
-
 </body>
-
-</html>
-
-
 </html>
