--- a/index.html
+++ b/index.html
@@ -9,8 +9,29 @@
     please see the following projects:
     <ul>
         <li><a href="/learning-javascript/Colorpicker/">Color Picker</a></li>
-        <li><a href="/learning-javascript/Lockpicker/">Lock Picker</a></li>
-        <li><a href="/learning-javascript/MemoryGame/">Memory Game</a></li>
+        <p>To do list:
+            <ul>
+                <li>Center item</li>
+            </ul>
+        </p>
+        <li><a href="/learning-javascript/Lockpicker/">Lock Picker</a>
+            <p>To do list:
+                <ul>
+                    <li>Remove H1</li>
+                    <li>Center item</li>
+                    <li>Enable downwards clicking</li>
+                </ul>
+            </p>
+        </li>
+        <li><a href="/learning-javascript/MemoryGame/">Memory Game</a>
+            <p>To do list:
+                <ul>
+                    <li>Track high score?</li>
+                    <li>Move start button after finished game</li>
+                    <li>Center item</li>
+                </ul>
+            </p>
+        </li>
     </ul>
 </body>
 </html>
