Updated index and memory game
Updated items in index and colors in memory game.

--- a/Memorygame/index.html
+++ b/Memorygame/index.html
@@ -57,11 +57,11 @@
     <div class="game"></div>
         
     <!-- Commenting out src and using github js source.
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    
     <script src="/learning-javascript/js/jquery.min.js"></script>
     <script>
-        const boxes = ['red', 'blue', 'green', 'purple', 'yellow', 'pink', 'black', 'orange'];
+        const boxes = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'violet', 'black'];
         const game = {};
         $('.startBtn').click(startGame);
 
