--- a/index.html
+++ b/index.html
@@ -1,37 +1,41 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning JavaScript</title>
 </head>
+
 <body>
     please see the following projects:
     <ul>
-        <li><a href="/learning-javascript/Colorpicker/">Color Picker</a></li>
-        <p>To do list:
+        <p>
+            <li><a href="/learning-javascript/Colorpicker/">Color Picker</a></li>
+            To do list:
             <ul>
                 <li>Center item</li>
             </ul>
         </p>
-        <li><a href="/learning-javascript/Lockpicker/">Lock Picker</a>
-            <p>To do list:
-                <ul>
-                    <li>Remove H1</li>
-                    <li>Center item</li>
-                    <li>Enable downwards clicking</li>
-                </ul>
-            </p>
-        </li>
-        <li><a href="/learning-javascript/Memorygame/">Memory Game</a>
-            <p>To do list:
-                <ul>
-                    <li>Track high score?</li>
-                    <li>Move start button after finished game</li>
-                    <li>Center item</li>
-                </ul>
-            </p>
-        </li>
+        <p>
+            <li><a href="/learning-javascript/Lockpicker/">Lock Picker</a></li>
+            To do list:
+            <ul>
+                <li>Remove H1</li>
+                <li>Center item</li>
+                <li>Enable downwards clicking</li>
+            </ul>
+        </p>
+        <p>
+            <li><a href="/learning-javascript/Memorygame/">Memory Game</a></li>
+            To do list:
+            <ul>
+                <li>Track high score?</li>
+                <li>Move start button after finished game</li>
+                <li>Center item</li>
+            </ul>
+        </p>
     </ul>
 </body>
+
 </html>
