--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="/learning-javascript/Memorygame/">Memory Game</a></li>
             To do list:
             <ul>
-                <li>Track high score?</li>
+                <li>Track high score? API?</li>
                 <li>Move start button after finished game</li>
                 <li>Center item</li>
             </ul>
