--- a/index.html
+++ b/index.html
@@ -5,38 +5,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learning JavaScript development.">
     <title>Learning JavaScript</title>
 </head>
+
+<!-- <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input">Form Styling</a> -->
 
 <body>
     Please see the following projects:
     <ul>
         <p>
-            <li><a href="/learning-javascript/Colorpicker/">Color Picker</a></li>
-            To do list:
-            <ul>
-                <li>Center item</li>
-            </ul>
+            <li><a href="/learning-javascript/Colorpicker/" target="_blank">Color Picker</a></li>
+            <table>
+                <tr>
+                    <th>
+                        To do list:
+                    </th>
+                </tr>
+                <tr>
+                    <td>
+                        End game
+                    </td>
+                </tr>
+            </table>
         </p>
         <p>
-            <li><a href="/learning-javascript/Lockpicker/">Lock Picker</a></li>
+            <li><a href="/learning-javascript/Lockpicker/" target="_blank">Lock Picker</a></li>
             To do list:
-            <ul>
+            <ol type="1" start="5">
                 <li>Remove H1</li>
                 <li>Center item</li>
                 <li>Enable downwards clicking</li>
-            </ul>
+            </ol>
         </p>
         <p>
-            <li><a href="/learning-javascript/Memorygame/">Memory Game</a></li>
+            <li><a href="/learning-javascript/Memorygame/" target="_blank">Memory Game</a></li>
             To do list:
-            <ul>
+            <ol type="i">
                 <li>Track high score? API?</li>
                 <li>Move start button after finished game</li>
                 <li>Center item</li>
-            </ul>
+            </ol>
         </p>
     </ul>
+
 </body>
 
 </html>
